fixed out spacing and alignment of cards and header on countryshow,. text still needs to be fixed. and will put in header image.

--- a/frontend/countryshow.css
+++ b/frontend/countryshow.css
@@ -12,7 +12,7 @@ body
 #flexbox
 {
     width: 1200px;
-    height: 1000px;
+    height: 100%
     display: flex;
     margin-left: auto;
     margin-right: auto;    
@@ -25,7 +25,7 @@ body
      display: inline-block;
     overflow: hidden;
     position: relative;
-    top: 200px;
+    top: 300px;
     align-content: center;
     right: -130px;
 }
@@ -121,7 +121,6 @@ h1 {
     margin-right: auto; 
     align-content: center;
     position: relative;
-    top: -950px;
     right: -500px;
     text-shadow: 2px 2px white;
     
@@ -136,3 +135,4 @@ width: 130px;
 right: -50px;
 top: 30px;
 font-size: 15px;
+}
